--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "jest-resolve": "24.7.1",
     "jest-watch-typeahead": "0.3.0",
     "mini-css-extract-plugin": "0.5.0",
-    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -73,6 +72,7 @@
     "react-video-tag": "0.0.10",
     "react-visibility-sensor": "^5.1.1",
     "resolve": "1.10.0",
+    "sass": "^1.55.0",
     "sass-loader": "^7.3.1",
     "semver": "6.0.0",
     "slick-carousel": "^1.8.1",
@@ -149,6 +149,9 @@
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
+  },
+  "resolutions": {
+    "node-sass": "^6.0.1"
   },
   "babel": {
     "presets": [
